# Proof-of-Contribution

./: README.md
proof-of-contribution-multichain/: README.md
proof-of-contribution-pyusd-billing/: README  package-lock.json  package.json  vite.config.ts
proof-of-contribution-pyusd-billing/android/app/: build.gradle
proof-of-contribution-pyusd-billing/blockchain/: .env.example  .gitignore  hardhat.config.js  package-lock.json  package.json
proof-of-contribution-pyusd-billing/blockchain/contracts/: InvoiceManager.sol  MockPYUSD.sol
proof-of-contribution-pyusd-billing/blockchain/deployments/: sepolia-deployment.json
proof-of-contribution-pyusd-billing/blockchain/scripts/: deploy.js
proof-of-contribution-pyusd-billing/blockchain/test/: InvoiceManager.test.js
proof-of-contribution-pyusd-billing/blockchain/utils/: ipfs.js  networks.js
proof-of-contribution-pyusd-billing/public/: network-setup.html
zk-rating/: README.md
zk-rating/src/pages/: index.tsx
zk-rating/zkPDF/: .gitignore  README.md
zk-rating/zkPDF/.github/workflows/: ci.yml  deploy.yml
zk-rating/zkPDF/app/: README.md  deploy.sh  global.d.ts  next.config.ts  package-lock.json  package.json
zk-rating/zkPDF/app/.github/workflows/: deploy.yml
zk-rating/zkPDF/app/app/: layout.tsx  page.tsx
zk-rating/zkPDF/app/app/lib/: wasm.ts
zk-rating/zkPDF/circuits/: .gitignore  Cargo.toml  README.md
zk-rating/zkPDF/circuits/contracts/: README.md
zk-rating/zkPDF/circuits/contracts/src/: PdfVerifier.sol
zk-rating/zkPDF/circuits/contracts/test/: PdfVerifier.t.sol
zk-rating/zkPDF/circuits/lib/: Cargo.toml  README.md
zk-rating/zkPDF/circuits/lib/src/: gst_example.rs  lib.rs  nullifier.rs  types.rs
zk-rating/zkPDF/circuits/program/: Cargo.toml
zk-rating/zkPDF/circuits/program/src/: main.rs
zk-rating/zkPDF/circuits/script/: Cargo.toml  index.js
zk-rating/zkPDF/docs/: README.md  book.toml  build.sh
zk-rating/zkPDF/docs/src/: SUMMARY.md  api-reference.md  architecture.md  faq.md  introduction.md  proving.md  quick-start.md  verification.md
zk-rating/zkPDF/docs/src/proving/: server-side.md
zk-rating/zkPDF/pdf-utils/: .gitignore  Cargo.toml  README.md
zk-rating/zkPDF/pdf-utils/core/: Cargo.toml  README.md
zk-rating/zkPDF/pdf-utils/core/src/: lib.rs
zk-rating/zkPDF/pdf-utils/extractor/: Cargo.toml  README.md
zk-rating/zkPDF/pdf-utils/sample-pdfs/: digitally_signed_ber.txt
zk-rating/zkPDF/pdf-utils/signature-validator/: Cargo.toml  README.md
zk-rating/zkPDF/pdf-utils/signature-validator/src/: lib.rs  pkcs7_parser.rs  signed_bytes_extractor.rs  types.rs
zk-rating/zkPDF/pdf-utils/wasm/: Cargo.toml  README.md  generate_wasm.sh  index.html
zk-rating/zkPDF/pdf-utils/wasm/src/: lib.rs
zk-rating/zkPDF/scripts/: README.md  deploy.sh
(+8 files in other folders)
