[package]
name = "zkpdf-lib"
version = "0.0.1"
edition = "2021"


[dependencies]
alloy-sol-types = { workspace = true }
sha2 = { version = "0.10", default-features = false }
alloy-primitives = "0.8"
serde = { version = "1", features = ["derive"] }
signature-validator = { path = "../../pdf-utils/signature-validator" }
extractor = { path = "../../pdf-utils/extractor" }
pdf_core = { package = "core", path = "../../pdf-utils/core" }
regex = "1.11"
