[package]
version = "0.1.0"
name = "zkpdf-script"
edition = "2021"
default-run = "zkpdf"

[[bin]]
name = "zkpdf"
path = "src/bin/main.rs"

[[bin]]
name = "evm"
path = "src/bin/evm.rs"

[[bin]]
name = "vkey"
path = "src/bin/vkey.rs"

[[bin]]
name = "prover"
path = "src/bin/prover.rs"

[dependencies]
sp1-sdk = "5.0.0"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.200", default-features = false, features = ["derive"] }
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1.40"
hex = "0.4.3"
alloy-sol-types = { workspace = true }
zkpdf-lib = { path = "../lib" }
extractor = { path = "../../pdf-utils/extractor" }
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["json"] }
hyper = { version = "1", features = ["full"] }
bincode = "1.3.3"
tower-http = { version = "0.5", features = ["cors"] }

[build-dependencies]
sp1-build = "5.0.0"
